objects/Tune_Integration_URL__mdt.object
<CustomObject>
    <fields>
        <fullName>Tune_Goal_Id__c</fullName>
        <label>Tune Goal Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tune_Goal_Name__c</fullName>
        <label>Tune Goal Name</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tune_Offer_Id__c</fullName>
        <label>Tune Offer Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tune Integration URL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Tune_Goal_Name__c</columns>
        <columns>Tune_Offer_Id__c</columns>
        <columns>Tune_Goal_Id__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Tune Integration URLs</pluralLabel>
</CustomObject>